--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/ic_home"
+        android:id="@+id/homeFragment"
         android:icon="@drawable/ic_home"
         android:title="@string/home"/>
 
     <item
-        android:id="@+id/ic_restaurant_menu"
+        android:id="@+id/restaurantMenuFragment"
         android:icon="@drawable/ic_restaurant_menu"
         android:title="@string/menu"/>
 
     <item
-        android:id="@+id/ic_search_menu"
+        android:id="@+id/searchMenuFragment"
         android:icon="@drawable/ic_search_menu"
         android:title="@string/search"/>
 
     <item
-        android:id="@+id/ic_create_set"
+        android:id="@+id/createSetFragment"
         android:icon="@drawable/ic_create_set"
         android:title="@string/create"/>
 
     <item
-        android:id="@+id/ic_favorites"
+        android:id="@+id/favoritesFragment"
         android:icon="@drawable/ic_favorite"
         android:title="@string/favorites"/>
 
