--- a/app/src/main/res/layout/fragment_restaurant_menu.xml
+++ b/app/src/main/res/layout/fragment_restaurant_menu.xml
@@ -28,21 +28,23 @@
         app:layout_constraintBottom_toBottomOf="@+id/dish_name_field"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/dish_name_field"
+
         android:layout_marginStart="10dp"
 
         app:srcCompat="@drawable/ic_food" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/dish_name_field"
-        android:layout_width="160dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
 
-        app:layout_constraintTop_toBottomOf="@+id/restaurant_menu_header"
-        app:layout_constraintStart_toEndOf="@+id/icon_dish_name_field"
-        android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
 
-        android:hint="@string/dish_name_label">
+        android:hint="@string/dish_name_label"
+
+        app:layout_constraintStart_toEndOf="@+id/icon_dish_name_field"
+        app:layout_constraintTop_toBottomOf="@+id/restaurant_menu_header">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/dish_name_field_edit_text"
@@ -57,20 +59,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/search"
-        android:layout_marginEnd="16dp"
+
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dish_name_field"
+
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/dish_name_field" />
+        android:layout_marginEnd="16dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dish_name_submit_button"
+
         android:layout_marginTop="16dp"
         android:layout_marginStart="16dp" />
 
