--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,7 +18,11 @@
         android:id="@+id/restaurantMenuFragment"
         android:name="com.amwms.food4u.fragments.RestaurantMenuFragment"
         android:label="fragment_restaurant_menu"
-        tools:layout="@layout/fragment_restaurant_menu" />
+        tools:layout="@layout/fragment_restaurant_menu" >
+        <action
+            android:id="@+id/action_restaurantMenuFragment_to_caloriesFragment"
+            app:destination="@id/caloriesFragment" />
+    </fragment>
     <fragment
         android:id="@+id/searchMenuFragment"
         android:name="com.amwms.food4u.fragments.SearchMenuFragment"
@@ -43,4 +47,9 @@
             android:id="@+id/action_countryFragment_to_homeFragment"
             app:destination="@id/homeFragment"/>
     </fragment>
+    <fragment
+        android:id="@+id/caloriesFragment"
+        android:name="com.amwms.food4u.fragments.CaloriesFragment"
+        android:label="fragment_calories"
+        tools:layout="@layout/fragment_calories" />
 </navigation>
