--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -27,7 +27,11 @@
         android:id="@+id/searchMenuFragment"
         android:name="com.amwms.food4u.fragments.SearchMenuFragment"
         android:label="fragment_search_menu"
-        tools:layout="@layout/fragment_search_menu" />
+        tools:layout="@layout/fragment_search_menu" >
+        <action
+            android:id="@+id/action_searchMenuFragment_to_caloriesFragment"
+            app:destination="@id/caloriesFragment" />
+    </fragment>
     <fragment
         android:id="@+id/createSetFragment"
         android:name="com.amwms.food4u.fragments.CreateSetFragment"
@@ -55,5 +59,14 @@
         <argument
             android:name="dishId"
             app:argType="string" />
+        <argument
+            android:name="dishName"
+            app:argType="string" />
+        <action
+            android:id="@+id/action_caloriesFragment_to_restaurantMenuFragment"
+            app:destination="@id/restaurantMenuFragment" />
+        <action
+            android:id="@+id/action_caloriesFragment_to_searchMenuFragment"
+            app:destination="@id/searchMenuFragment" />
     </fragment>
 </navigation>
