--- a/app/src/main/res/layout/fragment_search_menu.xml
+++ b/app/src/main/res/layout/fragment_search_menu.xml
@@ -36,7 +36,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/maximum_calories_field"
-        android:layout_width="200dp"
+        android:layout_width="225dp"
         android:layout_height="wrap_content"
 
         android:layout_marginStart="16dp"
@@ -52,13 +52,15 @@
         android:id="@+id/maximum_calories_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="number" />
+        android:inputType="number"
+        android:padding="11dp"
+        android:textSize="12sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/minimum_calories_field"
-        android:layout_width="200dp"
+        android:layout_width="225dp"
         android:layout_height="wrap_content"
 
         android:layout_marginStart="16dp"
@@ -74,7 +76,9 @@
             android:id="@+id/minimum_calories_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="number" />
+            android:inputType="number"
+            android:padding="11dp"
+            android:textSize="12sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
