--- a/app/src/main/res/layout/fragment_save_set.xml
+++ b/app/src/main/res/layout/fragment_save_set.xml
@@ -38,12 +38,34 @@
         android:id="@+id/save_set_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/submit"
+        android:text="@string/save"
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/recycler_view"
         android:layout_margin="16dp" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/set_name_field"
+        android:layout_width="225dp"
+        android:layout_height="wrap_content"
+
+        android:layout_marginStart="16dp"
+
+        android:hint="@string/set_name"
+
+        app:layout_constraintTop_toBottomOf="@id/recycler_view"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        >
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/set_name_edit_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textAutoComplete" />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
