--- a/app/src/main/res/layout/fragment_set.xml
+++ b/app/src/main/res/layout/fragment_set.xml
@@ -5,14 +5,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.FavoritesFragment">
+    tools:context=".fragments.SetFragment">
 
     <TextView
-        android:id="@+id/favorites_header"
+        android:id="@+id/set_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:text="@string/favorites"
+        android:text="@string/set"
         android:textSize="25sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -28,7 +28,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/favorites_header"
+        app:layout_constraintTop_toBottomOf="@id/set_header"
 
         android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
