--- a/app/src/main/res/layout/fragment_create_set.xml
+++ b/app/src/main/res/layout/fragment_create_set.xml
@@ -36,7 +36,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/maximum_calories_field"
-        android:layout_width="225dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
 
         android:layout_marginStart="16dp"
@@ -60,16 +60,18 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/minimum_calories_field"
-        android:layout_width="225dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
 
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
 
         android:hint="@string/minimum_calories_label"
 
-        app:layout_constraintTop_toBottomOf="@id/maximum_calories_field"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/select_allergens_text_view"
+        app:layout_constraintLeft_toRightOf="@id/maximum_calories_field"
+        app:layout_constraintRight_toRightOf="parent"
         >
 
         <com.google.android.material.textfield.TextInputEditText
@@ -82,6 +84,34 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
+    <TextView
+        android:id="@+id/slider_description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/number_of_sets"
+        android:textSize="12sp"
+
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+
+        app:layout_constraintTop_toBottomOf="@id/maximum_calories_field"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+
+    <com.google.android.material.slider.Slider
+        android:id="@+id/sets_number_slider"
+        android:layout_width="160dp"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/number_of_sets"
+
+        android:valueFrom="1.0"
+        android:valueTo="10.0"
+        android:stepSize="1.0"
+
+        android:layout_marginStart="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/slider_description" />
+
     <Button
         android:id="@+id/create_set_submit_button"
         android:layout_width="wrap_content"
@@ -89,7 +119,7 @@
         android:text="@string/create_set"
 
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/minimum_calories_field"
+        app:layout_constraintTop_toBottomOf="@id/slider_description"
 
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"/>
