--- a/app/src/main/res/layout/fragment_search_menu.xml
+++ b/app/src/main/res/layout/fragment_search_menu.xml
@@ -106,7 +106,8 @@
         app:layout_constraintTop_toBottomOf="@+id/search_menu_submit_button"
 
         android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp" />
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
