--- a/app/src/main/res/layout/favorite_set_item.xml
+++ b/app/src/main/res/layout/favorite_set_item.xml
@@ -7,9 +7,12 @@
 
     <TextView
         android:id="@+id/set_name_text_view"
-        android:textSize="16sp"
+        android:textSize="18sp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="2" />
+        android:layout_weight="2"
+        android:background="@color/blue_50"
+        android:layout_margin="5dp"
+        android:gravity="center" />
 
 </LinearLayout>
