--- a/app/src/main/res/layout/restaurant_item.xml
+++ b/app/src/main/res/layout/restaurant_item.xml
@@ -12,7 +12,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2"
-        android:background="@color/light_grey"
+        android:background="@color/blue_50"
         android:layout_margin="5dp"
         android:gravity="center" />
 
