--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
+    <color name="blue_50">#E1F5FE</color>
     <color name="blue_600">#039BE5</color>
     <color name="blue_500">#03A9F4</color>
     <color name="blue_800">#0277BD</color>
