--- a/app/src/main/res/layout/fragment_create_set.xml
+++ b/app/src/main/res/layout/fragment_create_set.xml
@@ -85,7 +85,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
-        android:id="@+id/slider_description"
+        android:id="@+id/slider_set_number_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/number_of_sets"
@@ -110,7 +110,35 @@
 
         android:layout_marginStart="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/slider_description" />
+        app:layout_constraintTop_toBottomOf="@id/slider_set_number_description" />
+
+    <TextView
+        android:id="@+id/slider_set_size_description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/set_size"
+        android:textSize="12sp"
+
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+
+        app:layout_constraintTop_toBottomOf="@id/minimum_calories_field"
+        app:layout_constraintStart_toEndOf="@id/sets_number_slider"
+        />
+
+    <com.google.android.material.slider.Slider
+        android:id="@+id/set_size_slider"
+        android:layout_width="160dp"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/set_size"
+
+        android:valueFrom="1.0"
+        android:valueTo="10.0"
+        android:stepSize="1.0"
+
+        android:layout_marginStart="16dp"
+        app:layout_constraintStart_toEndOf="@id/sets_number_slider"
+        app:layout_constraintTop_toBottomOf="@id/slider_set_size_description" />
 
     <Button
         android:id="@+id/create_set_submit_button"
@@ -119,7 +147,7 @@
         android:text="@string/create_set"
 
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/slider_description"
+        app:layout_constraintTop_toBottomOf="@id/set_size_slider"
 
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"/>
