--- a/app/src/main/res/layout/fragment_set.xml
+++ b/app/src/main/res/layout/fragment_set.xml
@@ -22,6 +22,20 @@
         app:layout_constraintBottom_toTopOf="@id/divider_top"
         app:layout_constraintWidth_percent="0.5" />
 
+    <ImageView
+        android:id="@+id/delete_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:src="@drawable/ic_delete"
+        android:padding="10dp"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/divider_top"
+
+        android:layout_marginEnd="16dp" />
+
     <View
         android:id="@+id/divider_top"
         android:layout_width="match_parent"
@@ -106,6 +120,5 @@
         android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
